refactor: UserStatus 제거 및 SessionRegistry 기반 온라인 판단